rust_test_framework/tests/ui/duplicate_params_single.stderr
error: Duplicate test case value found
 --> tests/ui/duplicate_params_single.rs:3:18
  |
3 | #[test_params(1, 1)]
  |                  ^
